--- a/package.json
+++ b/package.json
@@ -4,10 +4,12 @@
   "description": "To-do list for grocery shopping",
   "main": "server/index.js",
   "dependencies": {
-    "express": "^4.16.2"
+    "express": "^4.16.2",
+    "mongoose": "^4.13.6"
   },
   "devDependencies": {},
   "scripts": {
+    "start": "nodemon --inspect server/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
